<resources>
    <string name="app_name">My Application</string>
    <string name="pg_sample">PG/Sample</string>
    <string name="intern">Intern DCR</string>
    <string name="product">Product Group</string>
    <string name="literature">Literature</string>
    <string name="physician_sample">Physician Sample</string>
    <string name="gift">Gift</string>
    <string name="accompanied_with">Accompanied with</string>
    <string name="remarks">Remarks</string>
    <string name="submit">SUBMIT</string>
</resources>
