<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <RelativeLayout
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/cardBackground">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5sp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/pg_sample"
                    android:layout_marginStart="5sp"/>

        </RelativeLayout>

        <LinearLayout
                android:id="@+id/view2"
                android:layout_below="@+id/view1"
                android:layout_marginTop="1sp"
                android:layout_marginBottom="1sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardBackground"
                android:orientation="vertical">

            <android.support.design.card.MaterialCardView
                    android:id="@+id/mcv"
                    android:layout_margin="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4sp"
                    android:background="@color/cardBackground"
                    app:strokeColor="@color/colorAccent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:strokeWidth="2sp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/cardBackground"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/product"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            android:layout_marginLeft="10sp"/>

                    <Spinner
                            android:id="@+id/sp_product"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dropdown"/>

                </LinearLayout>

            </android.support.design.card.MaterialCardView>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <android.support.design.card.MaterialCardView
                        android:layout_margin="10sp"
                        android:layout_width="0sp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="4sp"
                        android:background="@color/cardBackground"
                        app:strokeColor="@color/colorAccent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        app:strokeWidth="2sp">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/cardBackground"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/literature"
                                android:textColor="@color/colorAccent"
                                android:textSize="12sp"
                                android:layout_marginLeft="10sp"/>

                        <Spinner
                                android:id="@+id/sp_literature"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown"/>

                    </LinearLayout>

                </android.support.design.card.MaterialCardView>

                <android.support.design.card.MaterialCardView
                        android:layout_margin="10sp"
                        android:layout_width="0sp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="4sp"
                        android:background="@color/cardBackground"
                        app:strokeColor="@color/colorAccent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        app:strokeWidth="2sp">

                    <TextView
                            android:background="@color/cardBackground"
                            android:text="00"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                </android.support.design.card.MaterialCardView>


            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <android.support.design.card.MaterialCardView
                        android:layout_margin="10sp"
                        android:layout_width="0sp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="4sp"
                        android:background="@color/cardBackground"
                        app:strokeColor="@color/colorAccent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        app:strokeWidth="2sp">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/cardBackground"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/physician_sample"
                                android:textColor="@color/colorAccent"
                                android:textSize="12sp"
                                android:layout_marginLeft="10sp"/>

                        <Spinner
                                android:id="@+id/sp_physician"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown"/>

                    </LinearLayout>

                </android.support.design.card.MaterialCardView>

                <android.support.design.card.MaterialCardView
                        android:layout_margin="10sp"
                        android:layout_width="0sp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="4sp"
                        android:background="@color/cardBackground"
                        app:strokeColor="@color/colorAccent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        app:strokeWidth="2sp">

                    <TextView
                            android:background="@color/cardBackground"
                            android:text="00"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                </android.support.design.card.MaterialCardView>


            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <android.support.design.card.MaterialCardView
                        android:layout_margin="10sp"
                        android:layout_width="0sp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="4sp"
                        android:background="@color/cardBackground"
                        app:strokeColor="@color/colorAccent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        app:strokeWidth="2sp">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/cardBackground"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gift"
                                android:textColor="@color/colorAccent"
                                android:textSize="12sp"
                                android:layout_marginLeft="10sp"/>

                        <Spinner
                                android:id="@+id/sp_gift"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown"/>

                    </LinearLayout>

                </android.support.design.card.MaterialCardView>

                <android.support.design.card.MaterialCardView
                        android:layout_margin="10sp"
                        android:layout_width="0sp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="4sp"
                        android:background="@color/cardBackground"
                        app:strokeColor="@color/colorAccent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        app:strokeWidth="2sp">

                    <TextView
                            android:background="@color/cardBackground"
                            android:text="00"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                </android.support.design.card.MaterialCardView>


            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
                android:layout_below="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardBackground">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtLayout1"
                    android:layout_margin="10sp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/et1"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/accompanied_with"
                        android:textColor="@android:color/holo_blue_light"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_below="@+id/txtLayout1"
                    android:id="@+id/txtLayout2"
                    android:layout_margin="10sp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/et2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/remarks"
                        android:textColor="@android:color/holo_blue_light"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                    android:id="@+id/btn_submit"
                    android:layout_marginTop="10sp"
                    android:layout_below="@+id/txtLayout2"
                    android:layout_width="100sp"
                    android:layout_height="60sp"
                    android:text="@string/submit"
                    android:background="@android:color/holo_blue_light"
                    android:layout_marginRight="10sp"
                    android:layout_alignParentRight="true"
                    app:backgroundTint="@android:color/holo_blue_light"/>

        </RelativeLayout>

    </RelativeLayout>

    </ScrollView>

</LinearLayout>